<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cobro Movil</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_mensaje_error">MainActivity</string>
    <string name="bienvenido_">Bienvenido:</string>
    <string name="title_activity_menu_clientes">Menu Clientes</string>
    <string name="title_activity_menu_sincronizar">Menu Sincronizar</string>
    <string name="title_activity_menu_list_items">Menu Principal</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_prueba">Menu Prueba</string>
    <string name="title_activity_busqueda_clientes">Buscar Clientes</string>
    <string name="title_activity_recaudos">Recaudos</string>
    <string name="title_activity_reportes">Reportes</string>
    <string name="title_activity_cobro__diario">Cobro Diario</string>
    <string name="title_activity_imprimir_recibo">Imprimir_recibo</string>
    <string name="imprimir">Imprimir</string>
    <string name="title_activity_clientes">Clientes</string>
    <string name="Registrese">Registrese</string>
    <string name="Entrar">Entrar</string>
    <string name="Usuario">Usuario:</string>
    <string name="Clave">Clave:</string>
    <string name="NombreDeUsuario">Nombre de Usuario</string>
    <string name="Clave2">Clave</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="clave">Clave</string>
    <string name="cedula">Cedula</string>
    <string name="nombre1">Nombre1</string>
    <string name="nombre2">Nombre2</string>
    <string name="apellido1">Apellido1</string>
    <string name="apellido2">Apellido2</string>
    <string name="direccion">Direccion</string>
    <string name="referencia">Referencia</string>
    <string name="enviar">Enviar</string>
    <string name="telefono">Telefono</string>
    <string name="valor_a_prestar">Valor a Prestar</string>
    <string name="agregar_clientes">Agregar Clientes</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="buscar_clientes">Buscar Clientes</string>
    <string name="recaudos">Recaudos</string>
    <string name="reportes">Reportes</string>
    <string name="bienvenidos">Bienvenidos: </string>
    <string name="items">Items</string>
    <string name="Buscar">Buscar</string>
    <string name="busqueda_por_cedula">Búsqueda por cédula:</string>
    <string name="Resultado_de_la_busqueda">Resultado de la Búsqueda:</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="buscar_cliente_cedula_nombre">Cedula/nombre</string>
    <string name="no_hay_resultados">No hay Resultados</string>
    <string name="title_activity_creditos">Creditos</string>
    <string name="codigo_cobrador">Codigo Cobrador</string>
    <string name="clientes">Cliente:</string>
    <string name="recaudo_martes">recaudo_martes</string>
    <string name="recaudomartes">Recaudo Martes</string>
    <string name="title_activity_recaudo_martes">RecaudoMartes</string>
    <string name="ingrese_cedula">Ingrese Cedula</string>
    <string name="Guardar">Guardar</string>
    <string name="valor_a_recaudar">Valor a recaudar</string>
    <string name="informacion_del_cliente">Información del Cliente</string>
    <string name="informacion_del_credito">Información del crédito</string>
    <string name="ver">Ver</string>
    <string name="total_recaudo">Total Recaudo:</string>
    <string name="RecaudoDiario">Recaudo Diario</string>
    <color name="WindowBackground">#70a9d2</color>
    <color name="EditTextBackground">#FFF</color>
    <color name="TextColor">#000</color>
    <color name="TextColorHint">#CCC</color>
    
    <string name="campo_usuario_vacio">Campo usuario vacio</string>
    <string name="todo">TODO</string>
    <string name="BajarClientes">Bajar Clientes</string>
    <string name="SubirRecaudos">Subir Recaudos</string>
    <string name="BajarCobradores">Bajar Cobradores</string>
    <string name="BajarCartera">Bajar Cartera</string>
    <string name="BajarUsuariosSistema">Bajar Usuarios</string>
    <string name="BajarTodo">Bajar Todos</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="Clientes">Clientes</string>

</resources>