<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#494949"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/usuario"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/usuario"
        android:text="@string/Usuario"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/userlogueado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_alignRight="@+id/tv1"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="28dp"
        android:text="@string/Clave"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userlogueado"
        android:layout_alignBottom="@+id/userlogueado"
        android:layout_toRightOf="@+id/tv1"
        android:ems="10"
        android:hint="@string/Clave2"
        android:inputType="textPassword"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtnRegistrarse"
        android:layout_alignRight="@+id/clave"
        android:layout_below="@+id/clave"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/ic_action_secure"
        android:text="@string/Entrar"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/BtnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userlogueado"
        android:layout_alignRight="@+id/clave"
        android:layout_below="@+id/entrar"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_action_secure"
        android:text="@string/Registrese"
        android:textColor="#ffffff" />

</RelativeLayout>