<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecaudoMartes" >

    <com.softdesignermonteria.cobromovil.autocompleteclientes.CustomAutoCompleteView
        android:id="@+id/autoCompleteRecaudoMartesClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextRecaudoMartesBuscarClientes"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/buscar_cliente_cedula_nombre" />

    <TextView
        android:id="@+id/TextRecaudoMartesBuscarClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/buscar_clientes" />

    <TextView
        android:id="@+id/TextRecaudoMartesNombreCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/autoCompleteRecaudoMartesClientes"
        android:layout_below="@+id/autoCompleteRecaudoMartesClientes"
        android:hint="@string/Resultado_de_la_busqueda"
        android:textSize="@dimen/dieciocho_dp" />

    <EditText
        android:id="@+id/EditTextRecaudoMartesCorbradoresId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoCompleteRecaudoMartesClientes"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextRecaudoMartesNombreCliente"
        android:ems="10"
        android:hint="@string/codigo_cobrador" >

    </EditText>

    <Button
        android:id="@+id/ButtonRecaudoMartesImprimir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonRecaudoMartesGuardar"
        android:layout_alignBottom="@+id/ButtonRecaudoMartesGuardar"
        android:layout_alignRight="@+id/EditTextRecaudoMartesCorbradoresId"
        android:drawableLeft="@drawable/ic_action_computer"
        android:text="@string/imprimir" />

    <Button
        android:id="@+id/ButtonRecaudoMartesGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditTextRecaudoMartesCorbradoresId"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/ButtonRecaudoMartesImprimir"
        android:drawableLeft="@drawable/ic_action_cloud"
        android:text="@string/Guardar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/autoCompleteRecaudoMartesClientes"
        android:layout_alignBottom="@+id/autoCompleteRecaudoMartesClientes"
        android:layout_alignParentLeft="true"
        android:text="@string/clientes"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EditTextRecaudoMartesCorbradoresId"
        android:layout_alignBottom="@+id/EditTextRecaudoMartesCorbradoresId"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/codigo_cobrador"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>