<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494949"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/userlogueado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv1"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tv1"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/nombre_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="22dp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/clave_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nombre_usuario"
        android:layout_marginTop="27dp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/bienvenidos"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/m_reportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BtnMenuPrinicipalAgregarClientes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/nombre_usuario"
        android:drawableLeft="@drawable/ic_action_import_export"
        android:gravity="left"
        android:text="@string/sincronizar"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/BtnMenuPrinicipalAgregarClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/clave_usuario"
        android:drawableLeft="@drawable/ic_action_person"
        android:gravity="left"
        android:text="@string/agregar_clientes"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/b_m_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/BtnMenuPrinicipalAgregarClientes"
        android:drawableLeft="@drawable/ic_action_person"
        android:gravity="left"
        android:text="@string/buscar_clientes"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/b_m_recaudos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b_m_clientes"
        android:drawableLeft="@drawable/ic_action_cloud"
        android:gravity="left"
        android:text="@string/recaudos"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/b_m_reportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b_m_recaudos"
        android:drawableLeft="@drawable/ic_action_copy"
        android:gravity="left"
        android:text="@string/reportes"
        android:textColor="#ffffff" />

</RelativeLayout>